@@ -1,3 +1,10 @@
+2007-11-04  Thomas M. Hinkle  <thinkle@cvs.gnome.org>
+
+	* gnome-sudoku/src/lib/gsudoku.py Fix decimal value in float error.
+	
+	* gnome-sudoku/src/lib/sudoku_maker.py Allow for empty lines in
+	sudoku files.
+
 2007-10-29  Thomas M. Hinkle  <thinkle@cvs.gnome.org>
 
 	* gnome-sudoku/src/lib/sudoku_maker.py: Keep generated puzzles in
